# EY-AgenticAI-08-Jun-2026

HITL-Demo/: main.py  pyproject.toml
LangChain-Demos/: ChatBot.py  Messages.py  Streaming.py  Structured_output.py  main.py  pyproject.toml
Memory-Demo/: main.py  persistence.py  pyproject.toml  similarity_search.py
Task-Manager-Agent/: main.py  pyproject.toml  tasks.db
