[project]
name = "memory-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.3.6",
    "langchain-openai>=1.3.0",
    "langgraph-checkpoint-postgres>=3.1.0",
    "openai>=2.41.0",
    "psycopg-binary>=3.3.4",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
]
